feat: modernize backtest comparison window with advanced UI
Redesigned comparison results display with:
- Custom Stage dialog instead of plain Alert
- Organized sections with color-coded borders
- Test Parameters section showing symbol, strategy, timeframe, bar count
- Performance Metrics section with color-coded values
- Trade Summary section with detailed trade statistics
- Professional dark theme styling (#0f172a, #1e293b backgrounds)
- GridPane layout for clean metric presentation
- Color-coded metrics (green for returns, red for losses, blue for ratios)
- Scrollable content for better UX
- Improved visual hierarchy and readability
- Additional metrics: best trade, worst trade, average profit